--- a/projetCV/index.html
+++ b/projetCV/index.html
@@ -15,14 +15,6 @@
     <link href="./css/main.css" rel="stylesheet" />
   </head>
   <body>
-    <!-- ici code pour l'entête -->
-    <header class="container">
-      <div class="page-header">
-        <div class="logo">
-          <a href="#">Logo.</a>
-        </div>
-      </div>
-    </header>
 
     <!-- section -->
 
@@ -30,7 +22,7 @@
       <div class="main">
         <div class="detail">
           <h3>Bonjour,</h3>
-          <h1>Je suis <span style="color: #f9532d">Doyon</span></h1>
+          <h1>Je suis <span style="color: #780ef1">Kontere</span></h1>
           <p>
             Je suis un développeur web professionnel. Mon objectif principal est
             d'aider et de satisfaire les clients locaux et internationaux par
@@ -42,7 +34,7 @@
 
         <div class="img-sec">
           <div class="images">
-            <img src="./images/v194_153.png" alt="" class="img-w" />
+            <img src="./images/profil.png" alt="" class="img-w" />
           </div>
         </div>
       </div>
