commenter les partie experience

--- a/projetCV/index.html
+++ b/projetCV/index.html
@@ -95,7 +95,7 @@
         <p>Freelance</p>
         <h5>Depuis 2021</h5>
       </div>
-      <div class="grid-exp-item5">
+      <!-- <div class="grid-exp-item5">
         <h5>Maintenance Ordinateur</h5>
         <p>Freelance</p>
         <h5>Depuis 2021</h5>
@@ -109,7 +109,7 @@
         <h5>Conception de Site Web</h5>
         <p>Terminale Sciences Experimentales</p>
         <h5>Acamedique</h5>
-      </div>
+      </div> -->
     </div>
     <br />
 
