--- a/projetCV/index.html
+++ b/projetCV/index.html
@@ -16,28 +16,28 @@
   </head>
   <body>
     <!-- section -->
-
-    <section class="container">
-      <div class="main">
-        <div class="detail">
-          <h3>Bonjour,</h3>
-          <h1>Je suis <span style="color: #780ef1">Kontere</span></h1>
-          <p>
-            Je suis un développeur web professionnel. Mon objectif principal est
-            d'aider et de satisfaire les clients locaux et internationaux par
-            des solutions de développement web et Mobile
-          </p>
-        </div>
-
-        <!-- partie pour l'image  -->
-
-        <div class="img-sec">
-          <div class="images">
-            <img src="./images/profil.png" alt="" class="img-w" />
+    <header>
+      <section class="container">
+        <div class="main">
+          <div class="detail">
+            <h3>Bonjour,</h3>
+            <h1>Je suis <span style="color: #780ef1">Kontere</span></h1>
+            <p>
+              Je suis un développeur web professionnel. Mon objectif principal
+              est d'aider et de satisfaire les clients locaux et internationaux
+              par des solutions de développement web et Mobile
+            </p>
+          </div>
+          <!-- partie pour l'image  -->
+          <div class="img-sec">
+            <div class="images">
+              <img src="./images/profil.png" alt="" class="img-w" />
+            </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </header>
+
     <br /><br /><br />
     <!-- section parcours -->
     <div class="titre-parcours one">
@@ -168,7 +168,7 @@
       </div>
       <div class="int-sport">
         <div class="details">
-          <span><i class="fa fa-male"> </i> SPORT</span>
+          <span><i class="fa fa-male"> </i> <a href="#">SPORT</a></span>
         </div>
         <div class="circle">
           <div class="html-bar"></div>
@@ -176,7 +176,7 @@
       </div>
       <div class="int-music">
         <div class="details">
-          <span><i class="fa fa-music"> </i> MUSIQUE</span>
+          <span><i class="fa fa-music"> </i> <a href="#">MUSIQUE</a></span>
         </div>
         <div class="circle">
           <div class="html-bar"></div>
@@ -184,12 +184,13 @@
       </div>
       <div class="int-code">
         <div class="details">
-          <span><i class="fa fa-code"> </i> CODE</span>
+          <span><i class="fa fa-code"> </i> <a href="#">CODE</a></span>
         </div>
         <div class="circle">
           <div class="html-bar"></div>
         </div>
       </div>
     </div>
+    <br /><br />
   </body>
 </html>
