--- a/projetCV/index.html
+++ b/projetCV/index.html
@@ -27,6 +27,17 @@
               est d'aider et de satisfaire les clients locaux et internationaux
               par des solutions de développement web et Mobile
             </p>
+            <br />
+            <div class="info">
+              <div>
+                <span> Telephone</span>
+                <p class="ok"> <i class="fa fa-phone"></i> +223 92-25-70-11 </p>
+              </div>
+              <div>
+                <span> Email</span>
+              <p class="ok"><i class="fa fa-send"></i> kontere.@gmail.com</p>
+              </div>
+            </div>
           </div>
           <!-- partie pour l'image  -->
           <div class="img-sec">
