--- a/projetCV/index.html
+++ b/projetCV/index.html
@@ -55,8 +55,9 @@
       <h3>Parcours</h3>
     </div>
     <div class="grid-parcours">
-      <div class="partie1"></div>
-      <div class="partie2"></div>
+      <div class="partie1 "></div>
+      <div class="partie2 "></div>
+      <div class="dot"></div>
       <div class="grid-parcou-item1">
         <h5>ODK en cours</h5>
         <p>Developpeur DEv</p>
@@ -85,8 +86,9 @@
       <h3>experiences</h3>
     </div>
     <div class="grid-exp">
-      <div class="partie1"></div>
-      <div class="partie2"></div>
+      <div class="partie1 "></div>
+      <div class="partie2 "></div>
+      <div class="dot"></div>
       <div class="grid-exp-item1">
         <h5>Stage Bio-Medicale</h5>
         <p>Hopital du Point-G</p>
