--- a/projetCV/index.html
+++ b/projetCV/index.html
@@ -181,7 +181,7 @@
       </div>
       <div class="int-sport">
         <div class="details">
-          <span><i class="fa fa-male"> </i> <a href="#">SPORT</a></span>
+          <span> <a href="#">SPORT</a></span>
         </div>
         <div class="circle">
           <div class="html-bar"></div>
@@ -189,7 +189,7 @@
       </div>
       <div class="int-music">
         <div class="details">
-          <span><i class="fa fa-music"> </i> <a href="#">MUSIQUE</a></span>
+          <span> <a href="#">MUSIQUE</a></span>
         </div>
         <div class="circle">
           <div class="html-bar"></div>
@@ -197,7 +197,7 @@
       </div>
       <div class="int-code">
         <div class="details">
-          <span><i class="fa fa-code"> </i> <a href="#">CODE</a></span>
+          <span> <a href="#">CODE</a></span>
         </div>
         <div class="circle">
           <div class="html-bar"></div>
