--- a/projetCV/index.html
+++ b/projetCV/index.html
@@ -8,10 +8,6 @@
       href="https://fonts.googleapis.com/css?family=Inter&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
     <link href="./css/main.css" rel="stylesheet" />
   </head>
   <body>
@@ -31,11 +27,11 @@
             <div class="info">
               <div>
                 <span> Telephone</span>
-                <p class="ok"> <i class="fa fa-phone"></i> +223 92-25-70-11 </p>
+                <p class="ok"><i class="fa fa-phone"></i> +223 92-25-70-11</p>
               </div>
               <div>
                 <span> Email</span>
-              <p class="ok"><i class="fa fa-send"></i> kontere.@gmail.com</p>
+                <p class="ok"><i class="fa fa-send"></i> kontere.@gmail.com</p>
               </div>
             </div>
           </div>
@@ -55,8 +51,8 @@
       <h3>Parcours</h3>
     </div>
     <div class="grid-parcours">
-      <div class="partie1 "></div>
-      <div class="partie2 "></div>
+      <div class="partie1"></div>
+      <div class="partie2"></div>
       <div class="dot"></div>
       <div class="grid-parcou-item1">
         <h5>ODK en cours</h5>
@@ -86,8 +82,8 @@
       <h3>experiences</h3>
     </div>
     <div class="grid-exp">
-      <div class="partie1 "></div>
-      <div class="partie2 "></div>
+      <div class="partie1"></div>
+      <div class="partie2"></div>
       <div class="dot"></div>
       <div class="grid-exp-item1">
         <h5>Stage Bio-Medicale</h5>
@@ -181,7 +177,10 @@
       </div>
       <div class="int-sport">
         <div class="details">
-          <span> <a href="#">SPORT</a></span>
+          <span
+            ><img src="./images/desktop.svg" alt="" class="sp" />
+            <a href="#">SPORT</a></span
+          >
         </div>
         <div class="circle">
           <div class="html-bar"></div>
@@ -189,7 +188,10 @@
       </div>
       <div class="int-music">
         <div class="details">
-          <span> <a href="#">MUSIQUE</a></span>
+          <span>
+            <img src="./images/music-notes.svg" alt="" class="mu" />
+            <a href="#">MUSIQUE</a></span
+          >
         </div>
         <div class="circle">
           <div class="html-bar"></div>
@@ -197,7 +199,10 @@
       </div>
       <div class="int-code">
         <div class="details">
-          <span> <a href="#">CODE</a></span>
+          <span
+            ><img src="./images/desktop.svg" alt="" class="cd" />
+            <a href="#">CODE</a></span
+          >
         </div>
         <div class="circle">
           <div class="html-bar"></div>
