--- a/projetCV/index.html
+++ b/projetCV/index.html
@@ -199,8 +199,8 @@
       </div>
       <div class="int-code">
         <div class="details">
-          <span
-            ><img src="./images/desktop.svg" alt="" class="cd" />
+          <span>
+            <img src="./images/desktop.svg" alt="" class="cd" />
             <a href="#">CODE</a></span
           >
         </div>
