--- a/projetCV/index.html
+++ b/projetCV/index.html
@@ -26,12 +26,12 @@
             <br />
             <div class="info">
               <div>
-                <span> Telephone</span>
-                <p class="ok"><i class="fa fa-phone"></i> +223 92-25-70-11</p>
+                <p class="okZ">Telephone</p>
+                <p class="ok">+223 92-25-70-11</p>
               </div>
               <div>
-                <span> Email</span>
-                <p class="ok"><i class="fa fa-send"></i> kontere.@gmail.com</p>
+                <p class="okZ">Email</p>
+                <p class="ok">kontere.@gmail.com</p>
               </div>
             </div>
           </div>
