--- a/index.html
+++ b/index.html
@@ -358,16 +358,7 @@
       <i class="fa fa-pinterest-p w3-hover-opacity"></i>
       <i class="fa fa-twitter w3-hover-opacity"></i>
       <i class="fa fa-linkedin w3-hover-opacity"></i>
-      <p class="w3-small">
-        This website was made with W3schools Spaces. Make your own free website
-        today!
-      </p>
-      <a
-        class="w3-button w3-round-xxlarge w3-small w3-light-grey w3-margin-bottom"
-        href="https://www.w3schools.com/spaces"
-        target="_blank"
-        >Start now</a
-      >
+      <p class="w3-small">CopyRight 2024</p>
       <!-- End footer -->
     </footer>
   </body>
